exercise3/ex3.1/1b/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /first
            pathType: Prefix
            backend:
              service:
                name: flask-first-svc
                port:
                  number: 8080
    - http:
        paths:
          - path: /second
            pathType: Prefix
            backend:
              service:
                name: flask-second-svc
                port:
                  number: 8080
